--- a/package.json
+++ b/package.json
@@ -8,14 +8,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "localforage": "^1.10.0",
-    "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
-    "react-scripts": "5.0.1",
-    "sort-by": "^1.2.0",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,7 +40,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1",
-    "react-router-dom": "^6.22.3"
+    "gh-pages": "^6.1.1"
   }
 }
